--- a/homework/02/Vagrantfile
+++ b/homework/02/Vagrantfile
@@ -75,7 +75,7 @@ Vagrant.configure("2") do |config|
               cp ~vagrant/.ssh/auth* ~root/.ssh
 	      yum install -y mdadm smartmontools hdparm gdisk
   	  SHELL
-	  box.vm.provision "shell", path: "./raid.sh"
+	  box.vm.provision "shell", path: "raid.sh"
 
       end
   end
