--- a/homework/11/Vagrantfile
+++ b/homework/11/Vagrantfile
@@ -1,52 +1,80 @@
-# -*- mode: ruby -*-
-# vim: set ft=ruby :
-home = ENV['HOME']
-ENV["LC_ALL"] = "en_US.UTF-8"
+# -*- mode: ruby -*- 
+#vim: set ft=ruby :
+home = ENV['HOME'] 
+ENV["LC_ALL"] = "en_US.UTF-8" 
 
 MACHINES = {
-  :PAM => {
-        :box_name => "centos/7",
-	:box_version => "1804.02",
-        :ip_addr => '192.168.11.150'
-  }
+  :lvm => {
+        :box_name => "centos/7", 
+	:box_version => "1804.02", 
+	:ip_addr => '192.168.11.101',
+    :disks => {
+        :sata1 => {
+            :dfile => home + '/VirtualBox VMs/sata1.vdi', 
+	    :size => 10240, 
+            :port => 1
+        },
+        :sata2 => {
+            :dfile => home + '/VirtualBox VMs/sata2.vdi', 
+	    :size => 2048, # Megabytes
+            :port => 2
+        },
+    }
+  },
 }
 
 Vagrant.configure("2") do |config|
+    config.vm.box_version = "1804.02"
+    MACHINES.each do |boxname, boxconfig|
+  
+        config.vm.define boxname do |box|
+  
+            box.vm.box = boxconfig[:box_name]
+            box.vm.host_name = boxname.to_s
+  
+            #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
+  
+            box.vm.network "private_network", ip: boxconfig[:ip_addr]
+  
+            box.vm.provider :virtualbox do |vb|
+                    vb.customize ["modifyvm", :id, "--memory", "256"]
+                    needsController = false
+            boxconfig[:disks].each do |dname, dconf|
+                unless File.exist?(dconf[:dfile])
+                  vb.customize ['createhd', '--filename', dconf[:dfile], '--variant', 'Fixed', '--size', dconf[:size]]
+                                  needsController = true
+                            end
+  
+            end
+                    if needsController == true
+                       vb.customize ["storagectl", :id, "--name", "SATA", "--add", "sata" ]
+                       boxconfig[:disks].each do |dname, dconf|
+                           vb.customize ['storageattach', :id, '--storagectl', 'SATA', '--port', dconf[:port], '--device', 0, '--type', 'hdd', '--medium', dconf[:dfile]]
+                       end
+                    end
+            end
+  
+        box.vm.provision "shell", inline: <<-SHELL
+            mkdir -p ~root/.ssh
+            cp ~vagrant/.ssh/auth* ~root/.ssh
+            yum install -y pam_script 
+            useradd adminuser1
+            useradd fakeuser1
+            echo qwerty12 | passwd adminuser1 --stdin
+            echo qwerty12 | passwd fakeuser1 --stdin
+            groupadd admin
+            groupadd fakeadmin
+            usermod -aG admin adminuser1
+            usermod -aG fakeadmin fakeadmin1
+            cp /vagrant/sshd /etc/pam.d/
+            sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config
+            cp /vagrant/script_pam.sh /usr/local/bin/script_pam.sh
+            chmod +x /usr/local/bin/script_pam.sh
+            systemctl restart sshd
 
-  MACHINES.each do |boxname, boxconfig|
-
-      config.vm.define boxname do |box|
-
-          box.vm.box = boxconfig[:box_name]
-          box.vm.host_name = boxname.to_s
-
-          box.vm.network "private_network", ip: boxconfig[:ip_addr]
-
-          box.vm.provider :virtualbox do |vb|
-            vb.customize ["modifyvm", :id, "--memory", "256"]
-          end
-          
-          box.vm.provision "shell", inline: <<-SHELL
-            mkdir -p ~root/.ssh; cp ~vagrant/.ssh/auth* ~root/.ssh
-            for pkg in epel-release pam_script; do yum install -y $pkg; done
-	    yum install pam_script -y
-	    useradd adminuser1
-	    useradd fakeuser1
-	    echo qwerty12 | passwd adminuser1 --stdin
-	    echo qwerty12 | passwd fakeuser1 --stdin
-	    groupadd admin
-	    groupadd fakeadmin
-	    usermod -aG admin adminuser1
-	    usermod -aG fakeadmin fakeadmin1
-	    cp /vagrant/sshd /etc/pam.d/	 
-	    sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config
-	    cp /vagrant/script_pam.sh /usr/local/bin/script_pam.sh
-	    chmod +x /usr/local/bin/script_pam.sh
-	    systemctl restart sshd
           SHELL
-
-      end
+  
+        end
+    end
   end
-end
-       
   
