--- a/homework/11/Vagrantfile
+++ b/homework/11/Vagrantfile
@@ -55,10 +55,9 @@ Vagrant.configure("2") do |config|
             end
   
         box.vm.provision "shell", inline: <<-SHELL
-            mkdir -p ~root/.ssh
-            cp ~vagrant/.ssh/auth* ~root/.ssh
-            yum install -y pam_script 
-            useradd adminuser1
+            mkdir -p ~root/.ssh cp ~vagrant/.ssh/auth* ~root/.ssh for pkg in epel-release pam_script; do 
+	    yum install -y $pkg; done yum install -y pam_script 
+	    useradd adminuser1
             useradd fakeuser1
             echo qwerty12 | passwd adminuser1 --stdin
             echo qwerty12 | passwd fakeuser1 --stdin
@@ -71,7 +70,6 @@ Vagrant.configure("2") do |config|
             cp /vagrant/script_pam.sh /usr/local/bin/script_pam.sh
             chmod +x /usr/local/bin/script_pam.sh
             systemctl restart sshd
-
           SHELL
   
         end
