--- a/homework/11/Vagrantfile
+++ b/homework/11/Vagrantfile
@@ -54,7 +54,7 @@ Vagrant.configure("2") do |config|
                     end
             end
   
-        box.vm.provision "shell", inline: <<-SHELL
+        box.vm.provision "shell", run: "always", inline: <<-SHELL
             mkdir -p ~root/.ssh cp ~vagrant/.ssh/auth* ~root/.ssh 
 	    for pkg in epel-release pam_script; do yum install -y $pkg; done 
 	    yum install -y pam_script 
