renamed:    ansible-role/nginx-role/README.md -> ansible-role/ansible-role/nginx/README.md 	new file:   ansible-role/ansible-role/nginx/defaults/main.yml 	renamed:    ansible-role/nginx-role/handlers/main.yml -> ansible-role/ansible-role/nginx/handlers/main.yml 	renamed:    ansible-role/nginx-role/meta/main.yml -> ansible-role/ansible-role/nginx/meta/main.yml 	renamed:    ansible-role/nginx-role/tasks/main.yml -> ansible-role/ansible-role/nginx/tasks/main.yml 	new file:   ansible-role/ansible-role/nginx/templates/nginx.conf.j2 	renamed:    ansible-role/nginx-role/tests/inventory -> ansible-role/ansible-role/nginx/tests/inventory 	renamed:    ansible-role/nginx-role/tests/test.yml -> ansible-role/ansible-role/nginx/tests/test.yml 	new file:   ansible-role/ansible-role/nginx/vars/main.yml 	renamed:    ansible-role/nginx-role/main-role.yml -> ansible-role/ansible-role/playbook.yml 	deleted:    ansible-role/nginx-role/defaults/main.yml 	deleted:    ansible-role/nginx-role/vars/main.yml

--- a/homework/09/ansible-role/ansible-role/nginx/handlers/main.yml
+++ b/homework/09/ansible-role/ansible-role/nginx/handlers/main.yml
@@ -1,6 +1,5 @@
 ---
-# handlers file for nginx-role
-
+# handlers file for /home/vagrant/ansible-role/nginx
 - name: restart nginx
   systemd:
     name: nginx
@@ -14,4 +13,3 @@
     name: nginx
     enabled: yes
 
-...
