--- a/homework/09/ansible-role/ansible-role/playbook.yml
+++ b/homework/09/ansible-role/ansible-role/playbook.yml
@@ -1,10 +1,7 @@
 ---
   - name: Nginx install
-    hosts: web2
+    hosts: webservers
     gather_facts: true
     become: true
-  
     roles:
-    - nginx-role
-
-...
+      - nginx
