modified:   ../09/Vagrantfile 	modified:   Dockerfile 	modified:   Vagrantfile 	deleted:    ../Vagrantfile

--- a/homework/10/Dockerfile
+++ b/homework/10/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:alpine
+FROM  nginx:1.17-alpine
 MAINTAINER isblokhin
 RUN apt update -y && apt upgrade -y 
 ADD https://raw.githubusercontent.com/isblokhin/otus-linux/master/homework/10/index.html /usr/share/nginx/html
