--- a/homework/10/Vagrantfile
+++ b/homework/10/Vagrantfile
@@ -38,7 +38,7 @@ Vagrant.configure("2") do |config|
           mkdir -p ~root/.ssh
           cp ~vagrant/.ssh/auth* ~root/.ssh
           yum update
-          yum install docker-ce docker-ce-cli containerd.io -y
+	  yum install -y mc docker docker-compose nano
           systemctl enable docker
           systemctl start docker
           docker build https://raw.githubusercontent.com/isblokhin/otus-linux/master/homework/10/Dockerfile
