--- a/homework/18/Vagrantfile
+++ b/homework/18/Vagrantfile
@@ -15,9 +15,9 @@ MACHINES = {
         :box_name => "centos/7",
         :net => [
                    {ip: '10.10.10.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
-                   {ip: '10.10.20.1', adapter: 3, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
-                   {ip: '10.10.30.1', adapter: 4, netmask: "255.255.255.252", virtualbox__intnet: "hw-net"},
-                   {ip: '192.168.1.1', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "mgt-net"},
+                   {ip: '10.10.20.1', adapter: 3, netmask: "255.255.255.252", virtualbox__intnet: "router1"},
+                   {ip: '10.10.30.1', adapter: 4, netmask: "255.255.255.252", virtualbox__intnet: "router2"},
+                   {ip: '192.168.1.1', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "central-net"},
                 ]
   },
   :centralServer => {
@@ -31,11 +31,11 @@ MACHINES = {
   :office1Router => {
     :box_name => "centos/7",
     :net => [
-               {ip: '10.10.20.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
+               {ip: '10.10.20.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router1"},
                {ip: '192.168.2.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "local1-net"},
-	       {ip: '192.168.2.65', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "testservers1-net"},
-               {ip: '192.168.2.129', adapter: 6, netmask: "255.255.255.192", virtualbox__intnet: "managers1-net"},
-               {ip: '192.168.2.193', adapter: 7, netmask: "255.255.255.192", virtualbox__intnet: "hardware1-net"},
+	       {ip: '192.168.2.65', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "testservers1-net"},
+               {ip: '192.168.2.129', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "managers1-net"},
+               {ip: '192.168.2.193', adapter: 6, netmask: "255.255.255.192", virtualbox__intnet: "hardware1-net"},
             ]
   },
   :office1Server => {
@@ -49,10 +49,10 @@ MACHINES = {
   :office2Router => {
     :box_name => "centos/7",
     :net => [
-              {ip: '10.10.30.2', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
-              {ip: '192.168.3.1', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
-              {ip: '192.168.3.129', adapter: 3, netmask: "255.255.255.192", virtualbox__intnet: "testservers2-net"},
-              {ip: '192.168.3.193', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "hardware2-net"},
+              {ip: '10.10.30.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "router2"},
+              {ip: '192.168.3.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
+              {ip: '192.168.3.129', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "testservers2-net"},
+              {ip: '192.168.3.193', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "hardware2-net"},
             ]
   }, 
   :office2Server => {
@@ -93,6 +93,7 @@ Vagrant.configure("2") do |config|
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             sysctl net.ipv4.conf.all.forwarding=1
             iptables -t nat -A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
+            iptables -t nat -A POSTROUTING ! -d 10.10.0.0/19 -o eth0 -j MASQUERADE
             ip route add 192.168.1.0/24 via 10.10.10.2
             ip route add 192.168.1.0/24 via 10.10.10.2
             ip route add 192.168.2.0/24 via 10.10.10.2
