--- a/homework/18/Vagrantfile
+++ b/homework/18/Vagrantfile
@@ -15,8 +15,8 @@ MACHINES = {
         :box_name => "centos/7",
         :net => [
                    {ip: '10.10.10.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
-                   {ip: '10.10.20.1', adapter: 3, netmask: "255.255.255.252", virtualbox__intnet: "router1"},
-                   {ip: '10.10.30.1', adapter: 4, netmask: "255.255.255.252", virtualbox__intnet: "router2"},
+                   {ip: '10.10.20.1', adapter: 3, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
+                   {ip: '10.10.30.1', adapter: 4, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
                    {ip: '192.168.1.1', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "central-net"},
                 ]
   },
@@ -31,7 +31,7 @@ MACHINES = {
   :office1Router => {
     :box_name => "centos/7",
     :net => [
-               {ip: '10.10.20.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router1"},
+               {ip: '10.10.20.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
                {ip: '192.168.2.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "local1-net"},
 	       {ip: '192.168.2.65', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "testservers1-net"},
                {ip: '192.168.2.129', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "managers1-net"},
@@ -49,7 +49,7 @@ MACHINES = {
   :office2Router => {
     :box_name => "centos/7",
     :net => [
-              {ip: '10.10.30.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "router2"},
+              {ip: '10.10.30.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
               {ip: '192.168.3.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
               {ip: '192.168.3.129', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "testservers2-net"},
               {ip: '192.168.3.193', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "hardware2-net"},
@@ -95,8 +95,8 @@ Vagrant.configure("2") do |config|
             iptables -t nat -A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
             iptables -t nat -A POSTROUTING ! -d 10.10.0.0/19 -o eth0 -j MASQUERADE
             ip route add 192.168.1.0/24 via 10.10.10.2
-            ip route add 192.168.1.0/24 via 10.10.10.2
             ip route add 192.168.2.0/24 via 10.10.10.2
+            ip route add 192.168.3.0/24 via 10.10.10.2
 	    ip route add 10.10.20.0/30 via 10.10.10.2
             ip route add 10.10.30.0/30 via 10.10.10.2
             SHELL
@@ -104,34 +104,35 @@ Vagrant.configure("2") do |config|
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             sysctl net.ipv4.conf.all.forwarding=1
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.255.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=10.10.10.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
             ip route add default via 10.10.10.1
-            ip route add 192.168.2.0/24 via 10.10.20.2
+	    ip route add 192.168.2.0/24 via 10.10.20.2
             ip route add 192.168.3.0/24 via 10.10.30.2
             SHELL
         when "centralServer"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.1.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
-            ip route add default via 192.168.0.1
-            #ip route add 192.168.2.0/24 via 192.168.1.1
-            #ip route add 192.168.3.0/24 via 192.168.1.1
+            ip route add default via 192.168.1.1
+            ip route add 192.168.2.0/24 via 192.168.1.1
+            ip route add 192.168.3.0/24 via 192.168.1.1
             SHELL
         when "office1Router"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo net.ipv4.ip_forward=1 >> /etc/sysctl.conf
             sysctl -p /etc/sysctl.conf
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=10.10.20.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
             ip route add default via 10.10.20.1
-          #ip route add 192.168.1.0/24 via 192.168.0.4
-            SHELL
+           # ip route add 192.168.1.0/24 via 10.10.20.1
+           # ip route add 192.168.3.0/24 via 10.10.20.1
+	    SHELL
         when "office1Server"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
@@ -139,24 +140,23 @@ Vagrant.configure("2") do |config|
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
             ip route add default via 192.168.2.1
-          #ip route add 192.168.1.0/24 via 192.168.2.1
-          #ip route add 192.168.0.0/24 via 192.168.2.1
+            ip route add 192.168.1.0/24 via 192.168.2.1
+            ip route add 192.168.3.0/24 via 192.168.2.1
             SHELL
         when "office2Router"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo net.ipv4.ip_forward=1 >> /etc/sysctl.conf
             sysctl -p /etc/sysctl.conf
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=10.10.30.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
             ip route add default via 10.10.30.1
-          #ip route add 192.168.2.0/24 via 192.168.0.3
-            SHELL
+	    SHELL
         when "office2Server"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.1.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.3.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network    
             ip route delete default 2>&1 >/dev/null || true
             ip route add default via 192.168.3.1
