--- a/homework/18/Vagrantfile
+++ b/homework/18/Vagrantfile
@@ -8,60 +8,60 @@ MACHINES = {
         :box_name => "centos/6",
         #:public => {:ip => '10.10.10.1', :adapter => 1},
         :net => [
-                   {ip: '10.10.10.1', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
+                   {ip: '192.168.255.1', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
                 ]
   },
   :centralRouter => {
         :box_name => "centos/7",
         :net => [
-                   {ip: '10.10.10.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
-                   {ip: '10.10.20.1', adapter: 3, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
-                   {ip: '10.10.30.1', adapter: 4, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
-                   {ip: '192.168.1.1', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "central-net"},
+                   {ip: '192.168.255.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "router-net"},
+                   {ip: '192.168.0.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
+                   {ip: '192.168.0.33', adapter: 4, netmask: "255.255.255.240", virtualbox__intnet: "hw-net"},
+                   {ip: '192.168.0.65', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "mgt-net"},
                 ]
   },
   :centralServer => {
         :box_name => "centos/7",
         :net => [
-                   {ip: '192.168.1.2', adapter: 2, netmask: "255.255.255.192", virtualbox__intnet: "central-net"},
-                   {adapter: 3, auto_config: false, virtualbox__intnet: true},
+                   {ip: '192.168.0.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
+		   {adapter: 3, auto_config: false, virtualbox__intnet: true},
                    {adapter: 4, auto_config: false, virtualbox__intnet: true},
-                ]
+                ]	  ]
   },
   :office1Router => {
     :box_name => "centos/7",
     :net => [
-               {ip: '10.10.20.2', adapter: 2, netmask: "255.255.255.252", virtualbox__intnet: "central-net"},
-               {ip: '192.168.2.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "local1-net"},
-	       {ip: '192.168.2.65', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "testservers1-net"},
-               {ip: '192.168.2.129', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "managers1-net"},
-               {ip: '192.168.2.193', adapter: 6, netmask: "255.255.255.192", virtualbox__intnet: "hardware1-net"},
+               {ip: '192.168.0.3', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
+               {ip: '192.168.2.1', adapter: 4, netmask: "255.255.255.128", virtualbox__intnet: "local1-net"},
+               {ip: '192.168.2.65', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "testservers1-net"},
+               {ip: '192.168.2.129', adapter: 6, netmask: "255.255.255.192", virtualbox__intnet: "managers1-net"},
+               {ip: '192.168.2.193', adapter: 7, netmask: "255.255.255.192", virtualbox__intnet: "hardware1-net"},
             ]
   },
   :office1Server => {
     :box_name => "centos/7",
     :net => [
                {ip: '192.168.2.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "local1-net"},
-               {adapter: 3, auto_config: false, virtualbox__intnet: true},
+ 	       {adapter: 3, auto_config: false, virtualbox__intnet: true},
                {adapter: 4, auto_config: false, virtualbox__intnet: true},
-            ]
+             ]
 },
-  :office2Router => {
+:office2Router => {
     :box_name => "centos/7",
     :net => [
-              {ip: '10.10.30.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
-              {ip: '192.168.3.1', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
-              {ip: '192.168.3.129', adapter: 4, netmask: "255.255.255.192", virtualbox__intnet: "testservers2-net"},
-              {ip: '192.168.3.193', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "hardware2-net"},
+              {ip: '192.168.0.4', adapter: 3, netmask: "255.255.255.128", virtualbox__intnet: "central-net"},
+              {ip: '192.168.1.1', adapter: 4, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
+              {ip: '192.168.1.129', adapter: 5, netmask: "255.255.255.192", virtualbox__intnet: "testservers2-net"},
+              {ip: '192.168.1.193', adapter: 6, netmask: "255.255.255.192", virtualbox__intnet: "hardware2-net"},
             ]
   }, 
   :office2Server => {
     :box_name => "centos/7",
     :net => [
-               {ip: '192.168.3.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
-               {adapter: 3, auto_config: false, virtualbox__intnet: true},
-               {adapter: 4, auto_config: false, virtualbox__intnet: true},
-            ]
+               {ip: '192.168.1.2', adapter: 2, netmask: "255.255.255.128", virtualbox__intnet: "local2-net"},
+             {adapter: 3, auto_config: false, virtualbox__intnet: true},
+             {adapter: 4, auto_config: false, virtualbox__intnet: true},
+	    ]
 },
   
 }
@@ -93,46 +93,42 @@ Vagrant.configure("2") do |config|
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             sysctl net.ipv4.conf.all.forwarding=1
             iptables -t nat -A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
-            iptables -t nat -A POSTROUTING ! -d 10.10.0.0/19 -o eth0 -j MASQUERADE
-            ip route add 192.168.1.0/24 via 10.10.10.2
-            ip route add 192.168.2.0/24 via 10.10.10.2
-            ip route add 192.168.3.0/24 via 10.10.10.2
-	    ip route add 10.10.20.0/30 via 10.10.10.2
-            ip route add 10.10.30.0/30 via 10.10.10.2
+            ip route add 192.168.0.0/24 via 192.168.255.2
+            ip route add 192.168.1.0/24 via 192.168.255.2
+            ip route add 192.168.2.0/24 via 192.168.255.2
             SHELL
         when "centralRouter"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             sysctl net.ipv4.conf.all.forwarding=1
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=10.10.10.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.255.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
-            ip route add default via 10.10.10.1
-	    ip route add 192.168.2.0/24 via 10.10.20.2
-            ip route add 192.168.3.0/24 via 10.10.30.2
+            ip route add default via 192.168.255.1
+            ip route add 192.168.2.0/24 via 192.168.0.3
+            ip route add 192.168.1.0/24 via 192.168.0.4
             SHELL
         when "centralServer"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.1.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
-            ip route add default via 192.168.1.1
-            ip route add 192.168.2.0/24 via 192.168.1.1
-            ip route add 192.168.3.0/24 via 192.168.1.1
+            ip route add default via 192.168.0.1
+            ip route add 192.168.2.0/24 via 192.168.0.3
+            ip route add 192.168.1.0/24 via 192.168.0.4
             SHELL
         when "office1Router"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo net.ipv4.ip_forward=1 >> /etc/sysctl.conf
             sysctl -p /etc/sysctl.conf
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=10.10.20.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
-            ip route add default via 10.10.20.1
-           # ip route add 192.168.1.0/24 via 10.10.20.1
-           # ip route add 192.168.3.0/24 via 10.10.20.1
-	    SHELL
+            ip route add default via 192.168.0.1
+            ip route add 192.168.1.0/24 via 192.168.0.4
+            SHELL
         when "office1Server"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
@@ -141,27 +137,28 @@ Vagrant.configure("2") do |config|
             ip route delete default 2>&1 >/dev/null || true
             ip route add default via 192.168.2.1
             ip route add 192.168.1.0/24 via 192.168.2.1
-            ip route add 192.168.3.0/24 via 192.168.2.1
+            ip route add 192.168.0.0/24 via 192.168.2.1
             SHELL
         when "office2Router"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo net.ipv4.ip_forward=1 >> /etc/sysctl.conf
             sysctl -p /etc/sysctl.conf
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=10.10.30.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.0.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network
             ip route delete default 2>&1 >/dev/null || true
-            ip route add default via 10.10.30.1
-	    SHELL
+            ip route add default via 192.168.0.1
+            ip route add 192.168.2.0/24 via 192.168.0.3
+            SHELL
         when "office2Server"
           box.vm.provision "shell", run: "always", inline: <<-SHELL
             echo "DEFROUTE=no" >> /etc/sysconfig/network-scripts/ifcfg-eth0 
-            echo "GATEWAY=192.168.3.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
+            echo "GATEWAY=192.168.1.1" >> /etc/sysconfig/network-scripts/ifcfg-eth1
             systemctl restart network    
             ip route delete default 2>&1 >/dev/null || true
-            ip route add default via 192.168.3.1
-          #ip route add 192.168.2.0/24 via 192.168.1.1
-          #ip route add 192.168.0.0/24 via 192.168.1.1
+            ip route add default via 192.168.1.1
+            ip route add 192.168.2.0/24 via 192.168.1.1
+            ip route add 192.168.0.0/24 via 192.168.1.1
             SHELL
         end
 
@@ -171,5 +168,4 @@ Vagrant.configure("2") do |config|
   
   
 end
-
 
