modified:   ansible/server/handlers/main.yml 	modified:   ansible/server/tasks/main.yml 	deleted:    ansible/server/tasks/main.yml.save 	deleted:    ansible/server/tasks/main.yml.save.1 	modified:   ansible/server/vars/main.yml

--- a/homework/14/ansible/server/handlers/main.yml
+++ b/homework/14/ansible/server/handlers/main.yml
@@ -1,6 +1,12 @@
 ---
 # handlers file for server
 
+- name: restart ntpd
+  systemd:
+    name: ntpd
+    state: restarted
+
+
 #- name: restart ipa-server
 #  systemd:
 #    name: ipa-server
