--- a/homework/14/ansible/server/tasks/main.yml
+++ b/homework/14/ansible/server/tasks/main.yml
@@ -16,12 +16,36 @@
     state: present
   tags: ipa-server-dns install
 
+- name: install ipa-server dns
+  yum:
+    name: "{{ packages }}"
+    state: present
+  tags: packages install
+
+- name: set timezone # Задаём часовой пояс.
+  timezone:
+    name: "{{ ntp_timezone }}"
+  notify:
+    - restart ntpd
+
+- name: hostname # Зададим машине нужное имя.
+  hostname: 
+    name: "{{ hostname }}.{{ domain }}"
+
+- name: hosts # Подправим Hosts: заменим 127.0.0.1 на реальный адрес с соотнесём его с fqdn
+  replace:
+    path: /etc/hosts
+    regexp: '^127\.0\.0\.1(\s+){{ hostname }}(\s+){{ hostname }}.*'
+    replace: "{{ my_ip }} {{ hostname }}.{{ domain }} {{ hostname }}"
+    backup: yes # Бекап!
+
+
 - name: install parametrs
-  shell: > 
-    ipa-server-install
-    --hostname=rc.otus.local
-    --domain=otus.local
-    --realm=OTUS.LOCAL
+  shell: "ipa-server-install -U --ds-password={{ dspassword }} --admin-password={{ adminpassword }} --domain={{ domain }} --realm={{ realm }} --hostname={{ hostname }}.{{ domain }} --setup-dns --mkhomedir --forwarder={{ forwarder }}  --auto-reverse --no-dnssec-validation"
+#    ipa-server-install
+#    --hostname {{ hostname }}
+#    --domain {{ domain }}
+#    --realm {{ realm }}
 #    --ds-password "{{ ds-password }}"
 #    --admin-password "{{ admin-password }}"
 #    --forwarder "{{ forwarder }}"
